changes in background color

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html><head>
-    <title>Bullseye! Tutoring</title>
+    <title>Blackboard</title>
     <link rel="stylesheet" href="css/style.css">
   <style type="text/css"></style><style type="text/css"></style></head>
   <body>
     <section id="page2">
-      <h1>Bullseye</h1>
+      <h1>Blackboard</h1>
       <img src="images/teacher.png" id="teacher2" alt="">
       <div id="blackboard"></div>
     </section>
