Added new styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <section id="page2">
       <h1>Blackboard</h1>
       <img src="images/teacher.png" id="teacher2" alt="">
-      <div id="blackboard"></div>
+      <div id="blackboard">
+        <p><span>The Tree</span></p>
+      </div>
     </section>
     <script src="js/main.js"></script>
   
