have added an extra header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <style type="text/css"></style><style type="text/css"></style></head>
   <body>
     <section id="page2">
+      <h2>blaclboard</h2>
       <h1>Bullseye</h1>
-      <img src="images/teacher.png" id="teacher2" alt="">
+      <img src="images/teacher.png" id="teacher2" alt="teacher">
       <div id="blackboard"></div>
     </section>
     <script src="js/main.js"></script>
